[gd_scene load_steps=12 format=2]

[ext_resource path="res://source/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/healthbar2.png" type="Texture" id=2]
[ext_resource path="res://assets/skill3.png" type="Texture" id=3]
[ext_resource path="res://source/HealthBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/background1.png" type="Texture" id=5]
[ext_resource path="res://levels/fight.gd" type="Script" id=6]
[ext_resource path="res://assets/sikll1.png" type="Texture" id=7]
[ext_resource path="res://assets/skill2.png" type="Texture" id=8]
[ext_resource path="res://assets/skill4.png" type="Texture" id=9]
[ext_resource path="res://levels/PopupMenu.gd" type="Script" id=10]
[ext_resource path="res://levels/SkillPanel.gd" type="Script" id=14]

[node name="Fight" type="Node2D"]
position = Vector2( 0, 22 )
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 1.0
margin_top = -58.0
margin_right = 1025.0
margin_bottom = 542.0
texture = ExtResource( 5 )
expand = true

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 137, 305 )

[node name="HealthDisplay" parent="Player" instance=ExtResource( 4 )]
margin_left = -61.0
margin_top = 128.0
margin_right = 59.0
margin_bottom = 144.0

[node name="SkillPanel" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 1 )
margin_left = -2.0
margin_top = 482.0
margin_right = 1029.0
margin_bottom = 578.0
script = ExtResource( 14 )

[node name="HBoxContainer" type="HBoxContainer" parent="SkillPanel"]
margin_right = 384.0
margin_bottom = 96.0

[node name="Attack" type="Button" parent="SkillPanel/HBoxContainer"]
margin_right = 108.0
margin_bottom = 102.0
icon = ExtResource( 7 )

[node name="Attack2" type="Button" parent="SkillPanel/HBoxContainer"]
margin_left = 112.0
margin_right = 220.0
margin_bottom = 102.0
icon = ExtResource( 8 )

[node name="Attack3" type="Button" parent="SkillPanel/HBoxContainer"]
margin_left = 224.0
margin_right = 332.0
margin_bottom = 102.0
icon = ExtResource( 3 )

[node name="Attack4" type="Button" parent="SkillPanel/HBoxContainer"]
margin_left = 336.0
margin_right = 444.0
margin_bottom = 102.0
icon = ExtResource( 9 )

[node name="PopupMenu" type="PopupMenu" parent="."]
margin_left = 290.0
margin_top = 130.0
margin_right = 710.0
margin_bottom = 350.0
script = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="PopupMenu"]
margin_right = 416.0
margin_bottom = 218.0
texture = ExtResource( 2 )
expand = true

[node name="Button" type="Button" parent="PopupMenu"]
margin_left = 170.0
margin_top = 183.0
margin_right = 250.0
margin_bottom = 213.0
text = "ok"

[node name="Label" type="Label" parent="PopupMenu"]
margin_top = 24.0
margin_right = 416.0
text = "you won"
align = 1
uppercase = true

[connection signal="pressed" from="SkillPanel/HBoxContainer/Attack" to="SkillPanel" method="_on_Attack_pressed"]
[connection signal="pressed" from="SkillPanel/HBoxContainer/Attack2" to="SkillPanel" method="_on_Attack2_pressed"]
[connection signal="pressed" from="SkillPanel/HBoxContainer/Attack3" to="SkillPanel" method="_on_Attack3_pressed"]
[connection signal="pressed" from="SkillPanel/HBoxContainer/Attack4" to="SkillPanel" method="_on_Attack4_pressed"]
[connection signal="pressed" from="PopupMenu/Button" to="PopupMenu" method="_on_Button_pressed"]
